modificación de estilos y visualización del menu, contenido, header y footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header-container">
-        <h1>EN CONSTRUCCIÓN</h1>
+        <h1 class="header-container__title">jlruedam_dev</h1>
     </header>
 
     <main class="main-container">
@@ -25,14 +25,41 @@
                 </ul>
             </nav>
         </section>
-        <section>
-
+        <section class="content-section">
+            <article class="content-section__article">
+                <h1>
+                    Lorem ipsum dolor sit amet consectetur.
+                </h1>
+                <p>
+                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis, numquam. Itaque ex eum porro et amet, repellendus perferendis earum quasi officiis maiores id reprehenderit doloribus aspernatur omnis nobis sapiente? Nulla.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos rerum explicabo laboriosam corporis reprehenderit dolorum dolore error nobis nesciunt? Distinctio aliquid in quam temporibus iusto ex soluta perferendis dignissimos minus.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos rerum explicabo laboriosam corporis reprehenderit dolorum dolore error nobis nesciunt? Distinctio aliquid in quam temporibus iusto ex soluta perferendis dignissimos minus.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos rerum explicabo laboriosam corporis reprehenderit dolorum dolore error nobis nesciunt? Distinctio aliquid in quam temporibus iusto ex soluta perferendis dignissimos minus.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos rerum explicabo laboriosam corporis reprehenderit dolorum dolore error nobis nesciunt? Distinctio aliquid in quam temporibus iusto ex soluta perferendis dignissimos minus.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos rerum explicabo laboriosam corporis reprehenderit dolorum dolore error nobis nesciunt? Distinctio aliquid in quam temporibus iusto ex soluta perferendis dignissimos minus.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos rerum explicabo laboriosam corporis reprehenderit dolorum dolore error nobis nesciunt? Distinctio aliquid in quam temporibus iusto ex soluta perferendis dignissimos minus.
+                </p>
+            </article>
         </section>
 
     </main>
 
     <footer class="footer-container">
-
+        <h1>
+            on my way...
+        </h1>
     </footer>
 </body>
 </html>
