--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jlruedam_dev</title>
-    <link rel="stylesheet" href="../css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Slab:wght@100;300&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--ENCABEZADO-->
     <header class="header-container">
         <h1 class=header-container__title><a href="index.html">jlruedam_dev</a></h1>
-       
     </header>
-
+    <!--CONTENEDOR PRINCIPAL-->
     <main class="main-container">
+        <!--PANEL LATERAL-->
         <section class="side-panel">
             <figure>
-                <img src="../img/Logo.ico" alt="Logo">
-                <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
-              </figure>
+                <img src="img/484101.png" width="40px" height="40px" alt="Logo">
+                <figcaption>Ing.</figcaption>
+            </figure>
             <div class="card"> 
                 <div class="card__cabecera">
                     <strong>
@@ -30,7 +31,7 @@
                     </strong> 
                 </div>
                 <div class="card__content"> 
-                    <img class="card__img" src="../img/yo2.jpg" alt="Aquí va la foto">  
+                    <img class="card__img" src="img/yo2.jpg" alt="Aquí va la foto">  
                     <div class="card__paragraph">
                         Hola!, soy Jorge. <br>
                         Soy Ingeniero Electrónico, Especialista en Telecomunicaciones y desarrollador software autodidacta.
@@ -49,22 +50,23 @@
                 </div>
             </div>
         </section>
+        <!--CONTENIDO-->
         <section class="content-panel">
             <nav class="navBar">
                 <ul class="navBar-list">
-                    <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="academy.html" target="subcontent">Academy</a></button></li>
+                    <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="templates/academy.html" target="subcontent">Academy</a></button></li>
                     <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Jobs</a></button></li>
                     <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Soft skills</a></button></li>
                     <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Contact</a></button></li>
                 </ul>
             </nav>
-            <iframe src="perfil.html" frameborder="0" name="subcontent" width="100%" height="100%">
+            <iframe src="templates/perfil.html" frameborder="0" name="subcontent" width="100%" height="100%">
                 
             </iframe>
         </section>
 
     </main>
-
+    <!--PIE DE PÁGINA-->
     <footer class="footer-container">
         <h1 class="header-container__title">
             on my way...
