Ajustar el icono  del panel lateral

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <main class="main-container">
         <!--PANEL LATERAL-->
         <section class="side-panel">
-            <figure>
-                <img src="img/484101.png" width="40px" height="40px" alt="Logo">
-                <figcaption>Ing.</figcaption>
+            <figure id="figure_side-panel">
+                <img src="img/484101.png" alt="Logo">
+                <figcaption>jlruedam</figcaption>
             </figure>
             <div class="card"> 
                 <div class="card__cabecera">
@@ -33,8 +33,8 @@
                 <div class="card__content"> 
                     <img class="card__img" src="img/yo2.jpg" alt="Aquí va la foto">  
                     <div class="card__paragraph">
-                        Hola!, soy Jorge. <br>
-                        Soy Ingeniero Electrónico, Especialista en Telecomunicaciones y desarrollador software autodidacta.
+                        
+                        Ingeniero Electrónico, Especialista en Telecomunicaciones y desarrollador software autodidacta.
                         Me gusta la lectura, las matemáticas y todo lo relacionacionado a las tecnologías de información y comunicaciones. 
                         eletrónicas.
                         <br><br>
